changes for recent edits

--- a/research/06_make_predictions.ipynb
+++ b/research/06_make_predictions.ipynb
@@ -1171,9 +1171,9 @@
    "uri": "us-docker.pkg.dev/deeplearning-platform-release/gcr.io/workbench-notebooks:m122"
   },
   "kernelspec": {
-   "display_name": "pytorch_default (Local)",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "pytorch_default"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1185,7 +1185,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.0"
+   "version": "3.10.14"
   }
  },
  "nbformat": 4,
